fixed the alignment issues

--- a/assets/styles/forgot_password.css
+++ b/assets/styles/forgot_password.css
@@ -80,7 +80,7 @@ text-align: left;
     width: 25vw;
 }
 
-.button1{
+#button1{
     color:white;
     text-align: center;
     border-radius: 10px;
@@ -89,12 +89,12 @@ text-align: left;
     ;*/rgba(192,22,22,0.9);
     font-weight:600;
     font-size: 12px;
-    width:90%;
+    width:100%;
     height: 45px;
     
 }
 
-.button1:hover{
+#button1:hover{
   cursor: pointer;
   transition: delay 2s;
   opacity: 0.7;
